--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Print debugging information
         run: |
-          echo "Python Version: ${python --version}"
-          echo "Working Directory: ${pwd}"
-          echo "Contents of Working Directory: ${ls -l}"
-          echo "Contents of site-packages: ${ls -l venv/lib/python*/site-packages}"
+          echo "Python Version: $(python --version)"
+          echo "Working Directory: $(pwd)"
+          echo "Contents of Working Directory: $(ls -l)"
+          echo "Contents of site-packages: $(ls -l venv/lib/python*/site-packages()"
