--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,16 @@
 bcrypt==4.3.0
-beautifulsoup4==4.13.4
 blinker==1.9.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
 click==8.2.1
 colorama==0.4.6
-distlib==0.3.9
-dotenv==0.9.9
 ecdsa==0.19.1
-filelock==3.18.0
 Flask==3.1.1
 Flask-Bcrypt==1.0.1
-flask-cors==6.0.1
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
 flask-swagger==0.2.14
 flask-swagger-ui==5.21.0
 greenlet==3.2.3
-idna==3.10
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -25,20 +18,13 @@ marshmallow==4.0.0
 marshmallow-sqlalchemy==1.4.2
 mysql-connector-python==9.3.0
 packaging==25.0
-pipenv==2025.0.4
-platformdirs==4.3.8
+psycopg2==2.9.10
 pyasn1==0.6.1
-pygame-ce==2.5.3
 python-dotenv==1.1.1
 python-jose==3.5.0
 PyYAML==6.0.2
-requests==2.32.3
 rsa==4.9.1
-setuptools==80.9.0
 six==1.17.0
-soupsieve==2.7
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
-urllib3==2.4.0
-virtualenv==20.31.2
 Werkzeug==3.1.3
