--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 ecdsa==0.19.1
 Flask==3.1.1
 Flask-Bcrypt==1.0.1
+flask-cors==6.0.1
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
 flask-swagger==0.2.14
